--- a/TemplateApp.css
+++ b/TemplateApp.css
@@ -1,15 +1,3 @@
-header nav ul
-footer nav ul {
-  padding: 0;
-  text-align: center; /* Center align the navigation */
-}
-
-header nav ul li, 
-footer nav ul li {
-  display: inline-block; /* Display list items inline */
-  margin: 0 10px; /* Add margin between list items */
-}
-
 header {
   position: fixed; /* Set the position to fixed */
   top: 0; /* Position the header at the top of the viewport */
@@ -30,8 +18,17 @@ footer {
   z-index: 1000; /* Ensure the footer appears above other content */
 }
 
-header nav ul li img,
-footer nav ul li img {
+.navbar {
+  padding: 0;
+  text-align: center; /* Center align the navigation */
+}
+
+.navbar .icon {
+  display: inline-block; /* Display list items inline */
+  margin: 0 10px; /* Add margin between list items */
+}
+
+.navbar .icon img {
   width: 12.5vw; /* Set the width of the images to one-eighth (12.5%) of the viewport width */
   height: auto; /* Automatically adjust the height to maintain the aspect ratio */
 }
